--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Enforger" />
 
     <meta property="og:title" content="Enforger - Professional Identity Documents Made Simple" />
-    <meta property="og:description" content="Order custom identity documents or buy DIY templates. Professional, secure, and easy-to-use solutions for all your document needs." />
+    <meta property="og:description" content="Order custom identity documents or buy DIY templates." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
